--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sweetalert2": "^11.22.5"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.13",
